# petalinux

./: .gitignore  README.md
.petalinux/: metadata
project-spec/configs/: config  rootfs_config
project-spec/hw-description/: design_1_wrapper.bit  ps7_init.c  ps7_init.h  ps7_init.html  ps7_init.tcl  ps7_init_gpl.c  ps7_init_gpl.h  system.hdf
project-spec/meta-user/recipes-bsp/device-tree/files/: system-user.dtsi
project-spec/meta-user/recipes-bsp/u-boot/: u-boot-xlnx_%.bbappend
project-spec/meta-user/recipes-bsp/u-boot/files/: user_2019-06-29-17-35-00.cfg
project-spec/meta-user/recipes-core/images/: petalinux-image-full.bbappend
project-spec/meta-user/recipes-kernel/linux/: linux-xlnx_%.bbappend
project-spec/meta-user/recipes-modules/: .gitignore  CMakeLists.txt
project-spec/meta-user/recipes-modules/adcmodule/: README  adcmodule.bb
project-spec/meta-user/recipes-modules/adcmodule/files/: Makefile  axi_adc_dma.c  axi_adc_dma.h  build.mk
project-spec/meta-user/recipes-modules/env/: cmake.env.example  make.env.example
userapp/: CMakeLists.txt
userapp/src/: adc_capture.c  adc_capture.h  main.c
